--- a/GoogleTextToSpeech/GoogleTextToSpeech.csproj
+++ b/GoogleTextToSpeech/GoogleTextToSpeech.csproj
@@ -12,8 +12,16 @@
     <PackageReference Include="Google.Cloud.Speech.V1" Version="3.4.0" />
     <PackageReference Include="Google.Cloud.Speech.V2" Version="1.0.0-beta06" />
     <PackageReference Include="Grpc.Core" Version="2.46.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
