--- a/GoogleTextToSpeech/appsettings.json
+++ b/GoogleTextToSpeech/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "JsonFilePath": "json file path downloaded from google cloud Speech to Text api"
+  "JsonFilePath": "C:\\Users\\akitou\\Desktop\\lyrical-marker-402608-ec3896f82d1b.json"
 }
